src/globals.css
/* ... */
header.header {
  padding-top: 0;
  padding-bottom: 0;
  display: flex;
  > div {
    width: 100%;
  }
}

.DocSearch-Button {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  transform: translateX(0.5rem);
}

.DocSearch-Search-Icon {
  width: auto;
  height: auto;
}

@media (min-width: 50rem) {
  .DocSearch-Button:hover {
    border-color: var(--docsearch-primary-color);
  }
}

.DocSearch-Form {
  box-shadow: none;
}

.DocSearch-Form:focus-within {
  box-shadow: var(--docsearch-searchbox-shadow);
}

.hero {
  h1,
  .tagline {
    text-wrap: balance;
  }
}
@media (width < 40rem) {
  .hero {
    > img,
    > .hero-html {
      width: min(40%, 20rem);
    }
    .actions {
      flex-direction: column;
      align-items: center;
    }
  }
}

